k8s/argo-cd/namespace-argo-cd.yaml
---
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "argocd"
  labels:
    goldilocks.fairwinds.com/enabled: "true"
